List of tasks accomplished / changes made / release notes, in reverse
chronological order:

V 0.9:

* theory work on exp(sqrt) being close to PSWF. Analysis.
* makefile has variables customizing openmp and precision, non-omp tested
* fortran single-prec demos (required all direct ft's in single prec too!)
* examples changed to err rel to max F.
* matlab interface control of opts.spread_sort.
* matlab interface using doubles as big ints w/ correct typecasting.
* twopispread removed, used flag in spread_opts for [-pi,pi] input instead.
* testfinufft* use same integer type INT as for interfaces, typecast all %ld in printf warnings, use omp rand array filling
* INT64 for necessary size-setting arrays, removed all %lf printf warnings in finufft*
* all internal array indexing is BIGINT, switchable from long long to int via SMALLINT compile flag (default off, see utils.h)
* all integers in interfaces are type INT, default 64-bit, switchable to 32 bit by INTERGER32 compile flag (see utils.h)
* test big probs (speed, crashing) and decide if BIGINT is long long or int?
slows any array access down, or spreading? allows I/O sizes (M, N1*N2*N3) > 2^31. Note June-Yub int*8 in nufft-1.3.x slowed things by factor 2-3.
* tidy up spreader to be BIGINT = long long compatible and test > 2^31.
* spreadtest parallel rand()
* sort flag passed to spreader via finufft, and test scripts check if Xeon (-> sort=0)
* opts in the manual
* removed all xk2, dNU2 sorted arrays, and nunneeded dims y,z; halved RAM usage.

V 0.8: (3/27/17)

* bnderr checking done in dir=1,2 main loops, not before.
* all kx2, dNU2 arrays removed, just done by permutation index when needed.
* MAC OSX test, makefile, instructions.
* matlab wrappers in 3D
* matlab wrappers, mcwrap issue w/ openmp, mex, and subdirs. Ship mex executables for linux. Link to .a
* matlab wrappers need ier output? yes, and internal omp numthreads control (since matlab's is poor)
* wrappers for MEX octave, instructions. Ship .mex for octave.