@@ -2,7 +2,6 @@ Current list of items to do for FINUFFT library
 
 HIGHER PRIORITY:
 
-* fix issue w/ needing mwrap when do make matlab.
 * swap legendre GLR with hellskitchen BSD version.
 * remove the 1/M type-1 prefactor, also in test routines. Add extra fortran interface which preserves it.
 * decide if should compile single-prec library with new names ("f" suffix), rather than current overall compile option which keeps names the same?
