@@ -3,7 +3,9 @@ chronological order:
 
 V 0.9:
 
+* removed timestamp-based make decision whether to rebuild matlab/finufft.cpp, since git clone creates files with random timestamp order!
 * theory work on exp(sqrt) being close to PSWF. Analysis.
+* fix issue w/ needing mwrap when do make matlab.
 * makefile has variables customizing openmp and precision, non-omp tested
 * fortran single-prec demos (required all direct ft's in single prec too!)
 * examples changed to err rel to max F.
